--- a/techPad-frontend/package.json
+++ b/techPad-frontend/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "dotenv": "^16.4.5",
     "easymde": "^2.18.0",
+    "markdown-it": "^14.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown-editor-smde": "^2.0.3",
@@ -29,7 +30,7 @@
   "eslintConfig": {
     "extends": [
       "react-app",
-    "react-app/jest"
+      "react-app/jest"
     ]
   },
   "browserslist": {
