--- a/techPad-frontend/package.json
+++ b/techPad-frontend/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "dompurify": "^3.2.1",
     "dotenv": "^16.4.5",
     "easymde": "^2.18.0",
     "markdown-it": "^14.1.0",
