--- a/techPad-frontend/package.json
+++ b/techPad-frontend/package.json
@@ -20,6 +20,7 @@
     "react-markdown-editor-smde": "^2.0.3",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "vercel": "^39.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
