--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,4 +29,4 @@ jobs:
           vercel-org-id: ${{ secrets.ORG_ID }}
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
           vercel-project-id: ${{ secrets.PROJECT_ID }}
-          github-token: ${{ secrets.ACCESSTOKEN }}
+          zeit-token: ${{ secrets.ACCESSTOKEN }}
