--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 16
+      - name: cd folder
+        run: cd techPad-frontend
       - name: npm install
         run: npm install
       - name: run tests
