--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,14 +17,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 16
-      - name: cd folder
-        run: cd techPad-frontend
-      - name: npm install
-        run: npm install
-      - name: run tests
-        run: npm run lint
       - name: build
-        run: npm run build
+        run: cd techPad-frontend && npm install && npm run build
       - name: deploy
         uses: amondnet/vercel-action@v20
         with:
